--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,12 +60,16 @@ dependencies {
     //test the image profile
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+   /* implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'*/
 
 
     implementation 'com.squareup.picasso:picasso:2.8'
+
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
 }
 
