--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.example.heathyapp4">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- For upload image -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -19,6 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HeathyApp4"
         tools:targetApi="31">
+        <activity
+            android:name=".Item.ItemDetails"
+            android:exported="false" />
+        <activity
+            android:name=".AddItem.AddNewItem"
+            android:exported="false" />
         <activity
             android:name=".CategoriesActivity"
             android:exported="false" />
