--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,19 @@
         android:theme="@style/Theme.HeathyApp4"
         tools:targetApi="31">
         <activity
+            android:name=".Home.MyCart"
+            android:exported="false" />
+        <activity
+            android:name=".AddItem.AddJustItem"
+            android:exported="false" />
+        <activity
             android:name=".Item.ItemDetails"
             android:exported="false" />
         <activity
             android:name=".AddItem.AddNewItem"
             android:exported="false" />
         <activity
-            android:name=".CategoriesActivity"
+            android:name=".Home.CategoriesActivity"
             android:exported="false" />
         <activity
             android:name=".AddItemActivite"
@@ -35,22 +41,22 @@
             android:name=".uploadPhotoTest"
             android:exported="false" />
         <activity
-            android:name=".SignUpSecond"
+            android:name=".SignUps.SignUpSecond"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".SignUps.Login"
             android:exported="false" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".Home.HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".SignUp"
+            android:name=".SignUps.SignUp"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashScreen"
+            android:name=".Startpages.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
