--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.heathyapp4">
+    package="com.example.heathyapp4" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -18,9 +18,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HeathyApp4"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+       <!-- <activity
+            android:name=".NavDrawerAct"
+            android:exported="false" />-->
         <activity
-            android:name=".Home.MyCart"
+            android:name=".Cart.payment"
             android:exported="false" />
         <activity
             android:name=".AddItem.AddJustItem"
@@ -57,7 +60,7 @@
             android:exported="false" />
         <activity
             android:name=".Startpages.SplashScreen"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
